--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -8,13 +8,6 @@
 
 body {
   overflow: hidden;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
   font-family: Cormorant;
 }
 
@@ -32,12 +25,18 @@ h6 {
 }
 header .container_flex {
   display: grid;
-  grid-template: 20vh/15vw 70vw 15vw;
-  place-items: center;
+  align-items: "";
   align-content: center;
+  place-items: center;
+  justify-items: "";
+  justify-content: "";
+  grid-template: 20vh/15vw 70vw 15vw;
 }
 header .container_flex figure {
   padding-left: 2rem;
+}
+header .container_flex figure svg {
+  height: 8rem;
 }
 header .container_flex h1 {
   font: normal 4.5rem Disco;
@@ -51,21 +50,34 @@ header .container_flex div {
   z-index: 2;
 }
 header .container_flex div p:nth-of-type(1) {
+  content: "";
   position: absolute;
   top: 7%;
+  right: initial;
+  bottom: initial;
   left: -10%;
+  width: 0;
+  height: 0;
+  z-index: "";
   font: bold 1rem Cormorant;
 }
 header nav {
+  content: "";
+  position: absolute;
+  top: -100%;
+  right: initial;
+  bottom: initial;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
   display: flex;
   align-items: center;
+  align-content: "";
+  place-items: "";
+  justify-items: "";
   justify-content: center;
-  position: absolute;
-  z-index: 1;
-  top: -100%;
-  left: 0;
-  height: 100%;
-  width: 100%;
+  grid-template: "";
   font: bold 4.5rem Cormorant;
   text-transform: uppercase;
   background-color: var(--bgNav);
@@ -93,15 +105,18 @@ header nav .active::after {
   content: "";
   position: absolute;
   top: -2vh;
+  right: initial;
+  bottom: initial;
   left: -1.3vw;
-  filter: url(#turbTest) blur(2px);
   width: 145%;
   height: 162%;
+  z-index: "";
+  animation: subNavKey 0.5s ease-out;
+  filter: url(#turbTest) blur(2px);
   border-bottom: 5px solid;
   border-top: 5px solid;
   backdrop-filter: opacity(0.5);
   border-radius: 1.2rem;
-  animation: subNavKey 0.5s ease-out;
   transform-origin: center;
 }
 @keyframes subNavKey {
@@ -113,32 +128,89 @@ header nav .active::after {
   }
 }
 
+#doors_container {
+  position: absolute;
+  top: 0;
+  right: initial;
+  bottom: initial;
+  left: initial;
+  width: 100vw;
+  height: 100vh;
+  z-index: "";
+  overflow: hidden;
+}
+
 .doors {
   position: absolute;
-  z-index: 10;
-  height: 100vh;
+  top: initial;
+  right: initial;
+  bottom: initial;
+  left: initial;
   width: 50%;
+  height: 100vh;
+  z-index: 10;
   display: flex;
   align-items: center;
+  align-content: "";
+  place-items: "";
+  justify-items: "";
   justify-content: center;
+  grid-template: "";
+  overflow: hidden;
 }
 .doors_right {
   top: 0;
   right: 0;
-  background: no-repeat center/100% url("../img/background/bgRight.png");
+  background: no-repeat center/cover url("../img/background/bgRight.png");
+}
+@media screen and (max-width: 550px) {
+  .doors_right {
+    position: absolute;
+    top: 0;
+    right: initial;
+    bottom: initial;
+    left: initial;
+    width: 100vw;
+    height: 50vh;
+    z-index: "";
+  }
+  .doors_right button {
+    min-width: 60vw;
+  }
 }
 .doors_right button {
   border-radius: 0.8rem;
   outline: 3px solid #EBEAEC;
   border: none;
-  padding: 1rem 5rem;
+  padding: 1rem 0;
   background: transparent;
   color: #EBEAEC;
   cursor: pointer;
   font-size: 4rem;
+  width: 30vw;
   font-family: Hillshort;
   letter-spacing: 0.5rem;
   transition: all 0.4s ease;
+}
+@media screen and (max-width: 550px) {
+  .doors_right button {
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 550px) and (max-width: 820px) {
+  .doors_right button {
+    font-size: 2.3rem;
+  }
+}
+@media screen and (min-width: 820px) and (max-width: 1024px) {
+  .doors_right button {
+    font-size: 3rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .doors_right button {
+    font-size: 4rem;
+  }
 }
 .doors_right button:hover {
   color: #181818;
@@ -146,28 +218,79 @@ header nav .active::after {
 }
 .doors_right::after {
   position: absolute;
-  content: url("../img/rightA.png");
   top: 35%;
+  right: initial;
+  bottom: initial;
   left: 0;
+  width: 0;
+  height: 0;
+  z-index: "";
+  content: url("../img/rightA.png");
   filter: url(#turbTest);
 }
+@media screen and (max-width: 550px) {
+  .doors_right::after {
+    transform: scale(0.6);
+  }
+}
+@media screen and (max-width: 820px) {
+  .doors_right::after {
+    top: 10%;
+  }
+}
 .doors_left {
-  background: no-repeat center/100% url("../img/background/bgLeft.png");
+  background: no-repeat center/cover url("../img/background/bgLeft.png");
   top: 0;
   left: 0;
+}
+@media screen and (max-width: 550px) {
+  .doors_left {
+    position: absolute;
+    top: initial;
+    right: initial;
+    bottom: 0;
+    left: initial;
+    width: 100vw;
+    height: 50vh;
+    z-index: "";
+  }
+  .doors_left button {
+    min-width: 60vw;
+  }
 }
 .doors_left button {
   border-radius: 0.8rem;
   outline: 3px solid #181818;
   border: none;
-  padding: 1rem 5rem;
+  padding: 1rem 0;
   background: transparent;
   color: #181818;
   cursor: pointer;
   font-size: 4rem;
+  width: 30vw;
   font-family: Hillshort;
   letter-spacing: 0.5rem;
   transition: all 0.4s ease;
+}
+@media screen and (max-width: 550px) {
+  .doors_left button {
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 550px) and (max-width: 820px) {
+  .doors_left button {
+    font-size: 2.3rem;
+  }
+}
+@media screen and (min-width: 820px) and (max-width: 1024px) {
+  .doors_left button {
+    font-size: 3rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .doors_left button {
+    font-size: 4rem;
+  }
 }
 .doors_left button:hover {
   color: #EBEAEC;
@@ -175,23 +298,45 @@ header nav .active::after {
 }
 .doors_left::after {
   position: absolute;
-  content: url("../img/leftA.png");
   top: 35%;
   right: 0;
+  bottom: initial;
+  left: initial;
+  width: auto;
+  height: 0;
+  z-index: "";
+  content: url("../img/leftA.png");
   filter: url(#turbTest);
+}
+@media screen and (max-width: 550px) {
+  .doors_left::after {
+    transform: scale(0.6);
+  }
+}
+@media screen and (max-width: 820px) {
+  .doors_left::after {
+    top: 10%;
+  }
 }
 .doors_top {
   position: absolute;
-  height: 50vh;
-  width: 100vw;
-  border-bottom: double #EBEAEC;
-  z-index: 3;
   top: -50%;
-  background: center/cover url("../img/background/fondDoorsBottom.png");
-  color: #EBEAEC;
+  right: initial;
+  bottom: initial;
+  left: initial;
+  width: 100vw;
+  height: 50vh;
+  z-index: 3;
   display: flex;
   align-items: center;
+  align-content: "";
+  place-items: "";
+  justify-items: "";
   justify-content: center;
+  grid-template: "";
+  border-bottom: double #EBEAEC;
+  background: center/cover url("../img/background/fondDoorsBottom.png");
+  color: #EBEAEC;
   text-transform: uppercase;
   font-size: 10rem;
   overflow: hidden;
@@ -201,20 +346,28 @@ header nav .active::after {
   bottom: -20%;
 }
 .doors_bottom {
-  overflow: hidden;
   position: absolute;
-  height: 50vh;
-  width: 100vw;
-  border-top: double #181818;
-  z-index: 3;
+  top: initial;
+  right: initial;
   bottom: -50%;
-  background: center/cover url("../img/background/fondDoorsTop.png");
-  color: #181818;
+  left: initial;
+  width: 100vw;
+  height: 50vh;
+  z-index: 3;
   display: flex;
   align-items: center;
+  align-content: "";
+  place-items: "";
+  justify-items: "";
   justify-content: center;
+  grid-template: "";
+  overflow: hidden;
+  border-top: double #181818;
+  background: center/cover url("../img/background/fondDoorsTop.png");
+  color: #181818;
   text-transform: uppercase;
   font-size: 10rem;
+  overflow: hidden;
 }
 .doors_bottom p {
   position: absolute;
@@ -222,10 +375,15 @@ header nav .active::after {
 }
 
 main .main_project {
-  position: relative;
-  padding-top: 5rem;
   display: grid;
-  grid-template: 80vh/30vw 70vw;
+  align-items: "";
+  align-content: "";
+  place-items: "";
+  justify-items: "";
+  justify-content: "";
+  grid-template: 70vh/30vw 70vw;
+  position: relative;
+  padding-top: 4vw;
 }
 main .main_project figure {
   padding-left: 10%;
@@ -253,8 +411,13 @@ main .main_project .project_description p {
 }
 main .main_project .project_description button {
   position: absolute;
+  top: initial;
   right: 10%;
   bottom: 30%;
+  left: initial;
+  width: auto;
+  height: auto;
+  z-index: "";
   padding: 1.2rem 6rem;
   font: 2rem bold Cormorant;
   border-radius: 1rem;
@@ -293,26 +456,38 @@ main .main_project .project_description .list_technos ul {
 }
 main .main_project .project_description--before {
   position: absolute;
-  z-index: 1;
   top: 0;
+  right: initial;
+  bottom: initial;
   left: 0;
-  height: 75%;
-  border-right: 5px solid #181818;
   width: 0;
+  height: 75%;
+  z-index: 1;
+  border-right: 5px solid #181818;
   background: #EBEAEC;
   filter: url(#turbTest) blur(1px);
 }
 main .main_project #arrow-down {
   position: absolute;
-  left: 50%;
+  top: initial;
+  right: initial;
   bottom: 30vh;
+  left: 50%;
+  width: auto;
+  height: auto;
+  z-index: "";
   cursor: pointer;
   opacity: 0.5;
 }
 main .main_project #arrow-up {
   position: absolute;
-  left: 50%;
   top: 0;
+  right: initial;
+  bottom: initial;
+  left: 50%;
+  width: auto;
+  height: 0;
+  z-index: "";
   cursor: pointer;
   opacity: 0.5;
 }
@@ -322,6 +497,11 @@ main .hide {
 
 #about {
   display: grid;
+  align-items: "";
+  align-content: "";
+  place-items: "";
+  justify-items: "";
+  justify-content: "";
   grid-template: 70vh/70vw 20vw;
   padding: 2% 5%;
 }
@@ -329,11 +509,15 @@ main .hide {
   height: 100%;
 }
 #about #subNav ul {
-  height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   align-items: center;
+  align-content: "";
+  place-items: "";
+  justify-items: "";
+  justify-content: space-around;
+  grid-template: "";
+  height: 100%;
+  flex-direction: column;
 }
 #about #subNav ul li {
   position: relative;
@@ -362,10 +546,13 @@ main .hide {
   content: "";
   position: absolute;
   top: -2vh;
+  right: initial;
+  bottom: initial;
   left: -1.3vw;
-  filter: url(#turbTest) blur(2px);
   width: 145%;
   height: 162%;
+  z-index: "";
+  filter: url(#turbTest) blur(2px);
   border-bottom: 5px solid;
   border-top: 5px solid;
   backdrop-filter: opacity(0.5);
@@ -383,15 +570,12 @@ main .hide {
 }
 #about .about {
   display: grid;
+  align-items: "";
+  align-content: "";
+  place-items: "";
+  justify-items: "";
+  justify-content: "";
   grid-template: 20vh 50vh/70vw;
-}
-#about .about #border-nav {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
 }
 #about #container_about_me {
   width: 60%;
@@ -404,10 +588,18 @@ main .hide {
   font-size: 1.5rem;
 }
 #about #container_cv {
-  position: relative;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  align-items: "";
+  align-content: "";
+  place-items: "";
   justify-items: center;
+  justify-content: "";
+  grid-template: "";
+  position: relative;
+  grid-template-columns: repeat(2, 1fr);
+}
+#about #container_cv--education, #about #container_cv--work {
+  position: relative;
 }
 #about #container_cv--education h2, #about #container_cv--work h2 {
   font-size: 3rem;
@@ -422,17 +614,6 @@ main .hide {
 }
 #about #container_cv--education li p, #about #container_cv--work li p {
   opacity: 0.7;
-}
-#about #container_cv--work {
-  position: relative;
-}
-#about #container_cv--work h2 {
-  position: relative;
-}
-#about #container_cv--work h2::before {
-  position: absolute;
-  left: -20%;
-  top: 0;
 }
 #about #container_cv--work ul ul {
   padding-left: 3rem;
@@ -450,17 +631,25 @@ main .hide {
   content: "";
   position: absolute;
   top: 20%;
+  right: initial;
+  bottom: initial;
   left: -30%;
-  height: 50%;
   width: 0.5rem;
+  height: 50%;
+  z-index: "";
   filter: blur(2px) url(#turbTest);
   border-left: 0.3rem solid #EBEAEC;
   opacity: 0.9;
 }
 #about #download {
   position: absolute;
+  top: initial;
+  right: initial;
   bottom: 2%;
   left: 45.5%;
+  width: auto;
+  height: auto;
+  z-index: "";
   cursor: pointer;
 }
 #about #download path {
@@ -486,8 +675,12 @@ main .hide {
 }
 #about #container_skills {
   display: grid;
-  justify-items: center;
   align-items: center;
+  align-content: "";
+  place-items: "";
+  justify-items: center;
+  justify-content: "";
+  grid-template: "";
 }
 #about #container_skills svg {
   transform: scale(1.3);
@@ -508,8 +701,8 @@ main .hide {
   stroke-dasharray: 1000;
 }
 #about #container_contact--title {
-  align-self: center;
   display: flex;
+  align-self: center;
 }
 #about #container_contact--title h2 {
   font-size: 4.2rem;
@@ -541,15 +734,17 @@ main .hide {
 #about #modal_error {
   position: absolute;
   top: 0;
+  right: initial;
+  bottom: initial;
   left: 0;
-  z-index: 2;
   width: 100vw;
   height: 100vh;
+  z-index: 2;
+  display: flex;
   color: #181818;
   background-color: rgba(24, 24, 24, 0.6705882353);
   backdrop-filter: blur(6px);
   text-align: center;
-  display: flex;
 }
 #about #modal_error .invalid {
   color: #E33026;
@@ -567,8 +762,13 @@ main .hide {
 }
 #about #modal_error p span {
   position: absolute;
-  right: 5%;
   top: 5%;
+  right: 5%;
+  bottom: initial;
+  left: initial;
+  width: 0;
+  height: 0;
+  z-index: "";
   font-size: 6rem;
   cursor: pointer;
 }
@@ -576,22 +776,33 @@ main .hide {
   text-align: center;
 }
 #about form fieldset {
-  border: none;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  align-content: "";
+  place-items: "";
+  justify-items: "";
+  justify-content: "";
+  grid-template: "";
+  flex-direction: column;
+  border: none;
 }
 #about form fieldset label {
   position: relative;
   color: #E33026;
   visibility: hidden;
   min-width: 15vw;
+  font-weight: 700;
 }
 #about form fieldset label::after {
-  content: "*";
   position: absolute;
+  top: initial;
   right: -5vw;
-  bottom: -2vh;
+  bottom: 2vh;
+  left: initial;
+  width: 0;
+  height: 0;
+  z-index: "";
+  content: "*";
 }
 #about form fieldset input {
   min-width: 25vw;
@@ -641,10 +852,14 @@ main .hide {
 }
 #about-transition {
   position: absolute;
-  height: 100%;
   top: 0;
+  right: initial;
+  bottom: initial;
   left: 0;
   width: 6vw;
+  height: 100%;
+  z-index: "";
+  overflow: hidden;
   background-color: #181818;
   border-left: 1rem solid #EBEAEC;
   filter: blur(5px) url(#turbTest);
