--- a/src/client/assets/sass/layout/_header.scss
+++ b/src/client/assets/sass/layout/_header.scss
@@ -6,12 +6,14 @@ header {
             padding-left: 2rem;
 
             svg {
-                height: 8rem;
+                @include imgSize(8rem);
             }
         }
 
         h1 {
-            font: normal 4.5rem $font-title;
+            @include mediaTextSize(4.5rem);
+            font-family: $font-title;
+            font-weight: normal;
             text-transform: uppercase;
         }
 
@@ -22,17 +24,24 @@ header {
             justify-self: end;
             z-index: 2;
 
+            svg {
+                @include imgSize(79px);
+            }
+
             p:nth-of-type(1) {
                 @include absolute($top: 7%, $left: -10%, $content: "");
-                font: bold 1rem $font-text;
+                @include mediaTextSize(1rem);
+                font-weight: bold;
             }
         }
     }
 
     nav {
+        @include mediaTextSize(4.5rem);
         @include absolute($top: -100%, $left: 0, $height: 100%, $width: 100%, $index: 1, $content: "");
         @include display(flex, $align-items: center, $justify-content: center);
-        font: bold 4.5rem $font-text;
+        font-family: $font-text;
+        font-weight: 900;
         text-transform: uppercase;
         background-color: var(--bgNav);
         text-align: center;
