--- a/src/client/assets/sass/pages/_about.scss
+++ b/src/client/assets/sass/pages/_about.scss
@@ -1,6 +1,6 @@
 #about {
     @include display(grid, $grid-template: 70vh/ 70vw 20vw);
-    padding: 2% 5%;
+    @include paddingSize(2%, 5%, 2%, 5%);
 
     #subNav {
         height: 100%;
@@ -11,8 +11,9 @@
             flex-direction: column;
 
             li {
+                @include mediaTextSize(3rem);
                 position: relative;
-                font: 3rem $font-title;
+                font-family: $font-title;
                 text-transform: uppercase;
                 cursor: pointer;
                 opacity: .5;
@@ -50,12 +51,12 @@
         width: 60%;
 
         p:first-child {
-            font-size: 2.5rem;
+            @include mediaTextSize(2.5rem)
         }
 
         .soft {
             opacity: .6;
-            font-size: 1.5rem;
+            @include mediaTextSize(1.5rem);
         }
     }
 
@@ -69,19 +70,19 @@
             position: relative;
 
             h2 {
-                font-size: 3rem;
-                padding-bottom: 2rem;
+                @include paddingSize($size-bottom: 2rem);
             }
 
             li {
-                padding-bottom: 1.2rem;
+                @include paddingSize($size-bottom: 1.2rem);
                 list-style: circle;
 
                 h4 {
-                    font-size: 1.5rem;
+                    @include mediaTextSize(1.5rem);
                 }
 
                 p {
+                    @include mediaTextSize(1rem);
                     opacity: .7;
                 }
             }
@@ -147,6 +148,7 @@
         @include display(grid, $justify-items: center, $align-items: center);
 
         svg {
+            @include imgSize(94px);
             transform: scale(1.3);
             transition: all .5s ease-out;
             cursor: pointer;
@@ -174,7 +176,6 @@
         @include alignSelf;
 
         h2 {
-            font-size: 4.2rem;
             text-transform: capitalize;
             margin-right: 10vw;
         }
@@ -227,16 +228,17 @@
         }
 
         p {
+            @include mediaTextSize(5rem);
             position: relative;
             margin: auto;
-            font: 5rem $font-title;
+            font-family: $font-title;
             border: 2px solid;
             border-radius: 1rem;
             padding: 4rem 8rem;
 
             span {
                 @include absolute($top: 5%, $right: 5%);
-                font-size: 6rem;
+                @include mediaTextSize(6rem);
                 cursor: pointer;
             }
         }
@@ -264,10 +266,11 @@
             }
 
             input {
+                @include mediaTextSize(1.4rem);
                 min-width: 25vw;
                 padding: .5rem;
                 margin-bottom: 1rem;
-                font: 1.4rem $font-text;
+                font-family: $font-text;
                 font-weight: 900;
                 outline: none;
                 background: local;
@@ -279,10 +282,11 @@
         }
 
         textarea {
+            @include mediaTextSize(1.4rem);
             margin: 0 10vw;
             width: 50vw;
             outline: none;
-            font: 1.4rem $font-text;
+            font-family: $font-text;
             font-weight: 900;
             border: none;
             border-left: 2px solid $light-color;
@@ -294,8 +298,9 @@
         }
 
         #submit {
+            @include mediaTextSize(2.5rem);
             padding: .5rem 4rem;
-            font: 2.5rem $font-title;
+            font-family: $font-title;
             font-weight: 900;
             text-transform: uppercase;
             letter-spacing: .3rem;
