--- a/src/client/assets/sass/utils/_mixins.scss
+++ b/src/client/assets/sass/utils/_mixins.scss
@@ -1,4 +1,5 @@
 @mixin buttons($color: $light-color, $radius: .8rem, $border-size: 3px) {
+    @include mediaTextSize(3rem);
     border-radius: $radius;
     outline: $border-size solid $color;
     border: none;
@@ -11,7 +12,6 @@
     font-family: Hillshort;
     letter-spacing: 0.5rem;
     transition: all .4s ease;
-    @include mediaTextSize(2rem, 2.3rem, 3rem);
 }
 
 ;
