--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-  overflow: hidden;
   font-family: Cormorant;
 }
 
@@ -513,22 +512,62 @@ main .main_project {
   position: relative;
   padding-top: 4vw;
 }
+@media screen and (max-width: 550px) {
+  main .main_project {
+    padding: 0;
+    display: block;
+  }
+}
 main .main_project figure {
-  padding-left: 10%;
   overflow: hidden;
   position: relative;
+}
+@media screen and (max-width: 550px) {
+  main .main_project figure {
+    padding: 0 0 0 5.7142857143%;
+  }
+}
+@media screen and (min-width: 550px) and (max-width: 820px) {
+  main .main_project figure {
+    padding: 0 0 0 6.6666666667%;
+  }
+}
+@media screen and (min-width: 820px) and (max-width: 1024px) {
+  main .main_project figure {
+    padding: 0 0 0 8%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  main .main_project figure {
+    padding: 0 0 0 10%;
+  }
+}
+@media screen and (max-width: 550px) {
+  main .main_project figure {
+    width: 50%;
+    margin: auto;
+  }
 }
 main .main_project figure img {
   clip-path: url(#blob);
   width: 100%;
-  height: 100%;
-  transform: translateX(700px);
+  height: 70%;
+  transform: translateX(400px);
+}
+@media screen and (max-width: 550px) {
+  main .main_project figure img {
+    clip-path: none;
+  }
 }
 main .main_project .project_description {
-  position: relative;
   padding: 0 10%;
-  transform: scaleY(0);
-  opacity: 1;
+}
+@media screen and (max-width: 550px) {
+  main .main_project .project_description {
+    height: 45vh;
+    padding: 0;
+    text-align: center;
+  }
 }
 main .main_project .project_description h2 {
   font-family: Cormorant;
@@ -613,6 +652,13 @@ main .main_project .project_description button {
     padding: 1.2rem 6rem 1.2rem 6rem;
   }
 }
+@media screen and (max-width: 550px) {
+  main .main_project .project_description button {
+    bottom: 0;
+    left: 10%;
+    right: initial;
+  }
+}
 main .main_project .project_description button:hover {
   background-color: #181818;
   color: #EBEAEC;
@@ -641,6 +687,17 @@ main .main_project .project_description .btn_git {
   main .main_project .project_description .btn_git {
     padding: 1.2rem 2rem 1.2rem 2rem;
   }
+}
+@media screen and (max-width: 550px) {
+  main .main_project .project_description .btn_git {
+    bottom: 0;
+    right: 10%;
+    left: initial;
+    padding: 0.2rem;
+  }
+}
+main .main_project .project_description .btn_git svg {
+  height: auto;
 }
 @media screen and (max-width: 550px) {
   main .main_project .project_description .btn_git svg {
@@ -701,6 +758,14 @@ main .main_project .project_description .list_technos ul {
   width: 15vw;
 }
 @media screen and (max-width: 550px) {
+  main .main_project .project_description .list_technos ul {
+    height: auto;
+    width: auto;
+    justify-content: space-around;
+    flex-flow: wrap;
+  }
+}
+@media screen and (max-width: 550px) {
   main .main_project .project_description .list_technos img {
     width: 40px;
   }
@@ -742,8 +807,15 @@ main .main_project #arrow-down {
   width: auto;
   height: auto;
   z-index: "";
-  cursor: pointer;
-  opacity: 0.5;
+}
+@media screen and (max-width: 550px) {
+  main .main_project #arrow-down {
+    bottom: 2%;
+    right: 10%;
+    left: initial;
+    cursor: pointer;
+    opacity: 0.5;
+  }
 }
 main .main_project #arrow-up {
   position: absolute;
@@ -754,10 +826,18 @@ main .main_project #arrow-up {
   width: auto;
   height: 0;
   z-index: "";
+  height: auto;
   cursor: pointer;
   opacity: 0.5;
 }
-main .hide {
+@media screen and (max-width: 550px) {
+  main .main_project #arrow-up {
+    bottom: 2%;
+    left: 10%;
+    top: initial;
+  }
+}
+main .main_project .hide {
   display: none;
 }
 
