--- a/src/client/assets/sass/pages/_project.scss
+++ b/src/client/assets/sass/pages/_project.scss
@@ -5,24 +5,44 @@ main {
         position: relative;
         padding-top: 4vw;
 
+        @media screen and (max-width: map-get($breakpoints, phone)) {
+            padding: 0;
+            display: block;
+        }
+
+
         figure {
-            padding-left: 10%;
+            @include paddingSize(0, 0, 0, 10%);
             overflow: hidden;
             position: relative;
 
+            @media screen and (max-width: map-get($breakpoints, phone)) {
+                width: 50%;
+                margin: auto;
+
+            }
+
             img {
+                @media screen and (max-width: map-get($breakpoints, phone)) {
+                    clip-path: none;
+                }
+
                 clip-path: url(#blob);
                 width: 100%;
-                height: 100%;
-                transform: translateX(700px);
+                height: 70%;
+                transform: translateX(calc(700px/1.75));
             }
         }
 
         .project_description {
-            position: relative;
+            // position: relative;
             padding: 0 10%;
-            transform: scaleY(0);
-            opacity: 1;
+
+            @media screen and (max-width: map-get($breakpoints, phone)) {
+                height: 45vh;
+                padding: 0;
+                text-align: center;
+            }
 
             h2 {
                 font-family: $font-text;
@@ -38,6 +58,13 @@ main {
                 @include mediaTextSize(2rem);
                 @include absolute($right: 10%, $bottom: 30%, $width: auto, $height: auto);
                 @include paddingSize(1.2rem, 6rem, 1.2rem, 6rem);
+
+                @media screen and (max-width: map-get($breakpoints, phone)) {
+                    bottom: 0;
+                    left: 10%;
+                    right: initial;
+                }
+
                 font-family: $font-text;
                 font-weight: 900;
                 border-radius: 1rem;
@@ -53,12 +80,21 @@ main {
 
             .btn_git {
                 @include paddingSize(1.2rem, 2rem, 1.2rem, 2rem);
+
+                @media screen and (max-width: map-get($breakpoints, phone)) {
+                    bottom: 0;
+                    right: 10%;
+                    left: initial;
+                    padding: 0.2rem;
+                }
+
                 bottom: 45%;
                 right: 16%;
                 transition: all 1.5s;
 
                 svg {
                     @include imgSize(86px);
+                    height: auto;
                 }
 
                 &:hover path {
@@ -82,6 +118,14 @@ main {
                     flex-flow: column wrap;
                     height: 30vh;
                     width: 15vw;
+
+                    @media screen and (max-width: map-get($breakpoints, phone)) {
+                        height: auto;
+                        width: auto;
+                        justify-content: space-around;
+                        flex-flow: wrap;
+
+                    }
                 }
 
                 img {
@@ -100,18 +144,33 @@ main {
 
         #arrow-down {
             @include absolute($left: 50%, $bottom: 30vh, $width: auto, $height: auto);
-            cursor: pointer;
-            opacity: .5;
+
+            @media screen and (max-width: map-get($breakpoints, phone)) {
+                bottom: 2%;
+                right: 10%;
+                left: initial;
+
+                cursor: pointer;
+                opacity: .5;
+            }
         }
 
         #arrow-up {
             @include absolute($left: 50%, $top: 0, $width: auto);
+            height: auto;
             cursor: pointer;
             opacity: .5;
-        }
-    }
 
-    .hide {
-        display: none;
+            @media screen and (max-width: map-get($breakpoints, phone)) {
+                bottom: 2%;
+                left: 10%;
+                top: initial;
+
+            }
+        }
+
+        .hide {
+            display: none;
+        }
     }
 }
