last responsive page  project

--- a/src/client/assets/sass/base/_reset.scss
+++ b/src/client/assets/sass/base/_reset.scss
@@ -7,6 +7,10 @@
 }
 
 body {
+    @media screen and (min-width: map-get($breakpoints, tablet)) {
+        overflow: hidden;
+    }
+
     font-family: $font-text;
 }
 
