--- a/src/client/assets/sass/pages/_home.scss
+++ b/src/client/assets/sass/pages/_home.scss
@@ -64,7 +64,7 @@
         background: center/cover url('../img/background/fondDoorsBottom.png');
         color: $light-color;
         text-transform: uppercase;
-        font-size: 10rem;
+        @include mediaTextSize(15rem);
         overflow: hidden;
 
         p {
@@ -81,7 +81,7 @@
         background: center/cover url('../img/background/fondDoorsTop.png');
         color: $darkness-color;
         text-transform: uppercase;
-        font-size: 10rem;
+        @include mediaTextSize(13rem);
         overflow: hidden;
 
         p {
